--- a/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForecastFragment"
-    android:background="#DCFCFC"
+    android:background="@color/fragment_background"
     android:layout_margin="15dp">
 
     <LinearLayout
@@ -16,14 +16,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 20"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_hai"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -32,23 +32,23 @@
                 android:src="@drawable/rain_icon"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Rainy\n 20C - 25C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/mua"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 21"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_ba"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -57,23 +57,23 @@
                 android:src="@drawable/partly_cloudy"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Partly Cloudy\n 24C - 30C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/may_rai_rac"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 22"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_tu"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -82,23 +82,23 @@
                 android:src="@drawable/partly_cloudy"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Partly Cloudy\n 24C - 29C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/may_rai_rac"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 23"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_nam"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -107,23 +107,23 @@
                 android:src="@drawable/sunny_icon"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Sunny\n 25C - 32C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/nang"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 24"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_sau"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -132,23 +132,23 @@
                 android:src="@drawable/sunny_icon"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/row_height"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Sunny\n 26C - 31C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/nang"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 25"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_bay"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -157,23 +157,23 @@
                 android:src="@drawable/thunder_storm"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Thunderstorm\n 19C - 24C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/bao"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 26"
-                android:textSize="20sp"></TextView>
+                android:text="@string/chu_nhat"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -182,23 +182,23 @@
                 android:src="@drawable/thunder_storm"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Thunderstorm\n 20C - 24C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/bao"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 27"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_hai"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -207,23 +207,23 @@
                 android:src="@drawable/rain_icon"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Rainy\n 22C - 28C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/mua"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 28"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_ba"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -232,23 +232,23 @@
                 android:src="@drawable/cloudy_icon"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Cloudy\n 21C - 26C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/may"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 29"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_tu"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -257,23 +257,23 @@
                 android:src="@drawable/partly_cloudy"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Cloudy\n 21C - 27C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/may"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="@dimen/row_height">
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="@dimen/text_width_left"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nov 30"
-                android:textSize="20sp"></TextView>
+                android:text="@string/thu_nam"
+                android:textSize="@dimen/text_size"></TextView>
 
             <ImageView
                 android:layout_width="90dp"
@@ -282,11 +282,11 @@
                 android:src="@drawable/rain_icon"></ImageView>
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="@dimen/text_width_right"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=" Rainy\n 22C - 28C"
-                android:textSize="20sp"></TextView>
+                android:text="@string/mua"
+                android:textSize="@dimen/text_size"></TextView>
         </LinearLayout>
 
     </LinearLayout>
